# f1-guessing-game-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Procfile  README.md  TODO  dev-requirements.txt  init_db.py  project.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  test-requirements.txt  tox.ini  update_races_date.py
.github/workflows/: tox-test.yml  tox-tests.yml
_OLD/: init_db.py  main.py  models.py  races.json  results.const.json  results.json  results.py  standins.csv  update_races.py  utils.py
_OLD/scripts/: get_drivers.py  get_race_result.py  get_races.py
_OLD/static/: style.css  validate_season.js
_OLD/templates/: base.html  driver_select.html  guess_overview_season.html  index.html  login.html  profile.html  rules.html  season.html  signup.html  wip.html
app/: __init__.py  auth.py  factory.py  main.py  models.py  results.py  utils.py
app/data/: races.json
app/ergast_client/: client.py
app/frontend/: package-lock.json  package.json
app/models/: bet.py  races.py  user.py
app/static/: build_season_bet.js  index.js  live_time.js  season.js  style.css  validate_podium.js
app/templates/: base.html  bet_result.html  current_top_players.html  driver_select.html  evaluate.html  guess_overivew_race.html  guess_overview.html  guess_overview_race.html  guess_overview_season.html  index.html  login.html  race.html  races.html  result.html  results_table.html  rules.html  season.html  signup.html  wip.html
scripts/: get_drivers.py  get_race_result.py  get_races.py  init_db.py
tests/: test_results.py  test_utils.py
(+13 files in other folders)
